# CESAR.school-text_miner

./: README.md  pyproject.toml
src/: 20241008_desafio_01_part01.py  20241008_desafio_01_part02.py
src/aula_01/: 20241008_desafio_01_part02.py  web_scraping.py
