[project]
name = "cesar-school-text-miner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "html5lib>=1.1",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "selenium>=4.25.0",
    "webdriver-manager>=4.0.2",
]
